<resources>
    <string name="app_name">Wanderlusty</string>
    <string name="dummy_image">Dummy Image</string>
    <string name="icon">Icon</string>
    <string name="forest">Forest</string>
    <string name="mountain">Mountain</string>
    <string name="canyon">Canyon</string>
    <string name="beach">Beach</string>
    <string name="river">River</string>
    <string name="cave">Cave</string>
    <string name="text_explore">Explore</string>
    <string name="section_hidden_gems">Hidden Gems</string>
    <string name="subtitle_hidden_gems">Explore nearby gems and hidden treasures</string>
    <string name="subtitle_favorite_place">Designing an Unforgettable Trip</string>
    <string name="section_favorite_place">Favorite Place</string>
    <string name="search">Where to?</string>
    <string name="explore">Explore</string>
    <string name="title_promotion">Coastal drives and\nforested hillsides</string>
    <string name="subtitle_promotion">Immerse yourself in the beauty of nature, \nwhere the rugged shoreline meets the\nverdant wilderness</string>
    <string name="button_promotion">Let\'s go</string>
    <string name="title_add_tourism">Help expand our\nmap of wonders!</string>
    <string name="cta_add_tourism">Add a hidden gem</string>
    <string name="title_share_photo">Share some photos of location</string>
    <string name="title_location">Title this location</string>
    <string name="hint_title_location">Capture the essance in a phrase</string>
    <string name="add_location">Add location</string>
    <string name="hint_add_location">Specify the location for easy searching</string>
    <string name="description_location">Write the description</string>
    <string name="hint_description_location">Tell us more about this wonderful gems</string>
    <string name="btn_add_tourism">Submit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_explore">Explore</string>
    <string name="title_community">Community</string>
    <string name="title_plans">Plans</string>
    <string name="title_account">Account</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_back">Welcome back.</string>
    <string name="text_account">Account</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="units">Units</string>
    <string name="notification">Notification</string>
    <string name="lang_value">English (United States)</string>
    <string name="currency_value">IDR</string>
    <string name="units_value">Miles/Feet</string>
    <string name="help_center">Help center</string>
    <string name="app_feedback">App feedback</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="austin_nicholas_tham">Austin Nicholas Tham</string>
    <string name="txt_post_subtitle">I found an interesting experience in the city of Pontianak.</string>
    <string name="txt_post_title">Interesting Experience</string>
    <string name="date_post">5d ago</string>
    <string name="num_comment">302</string>
    <string name="txt_like">4,302</string>
    <string name="title_card_four">Cafe Couscous - Vege</string>
    <string name="txt_tag_card_four">Cafe • Healty • Vegetarian</string>
    <string name="txt_review_card_four">(1000)</string>
    <string name="txt_rating_card_four">4.8</string>
    <string name="sponsored">Sponsored</string>
    <string name="official_site">Official Site</string>
    <string name="contact">Contact</string>
    <string name="txt_price_card_three">Rp. 484.200,-</string>
    <string name="txt_rating_card_three">4.8</string>
    <string name="txt_review_card_three">(1000)</string>
    <string name="txt_title_card_three">HARRIS Hotel Semarang</string>
    <string name="txt_title_card_two">Semarang</string>
    <string name="review_value"><u>6,417</u></string>
    <string name="tourism_review"><u> reviews</u></string>
    <string name="dummy_description">The majestic Cervino, also known as the Matterhorn, stands as an iconic sentinel in the Pennine Alps. Its distinctive pyramid shape pierces the sky, shrouded in eternal snow and ice. Rising 4,478 meters above sea level, it commands awe and reverence from all who gaze upon it. The mountain is a playground for mountaineers and a sanctuary for alpine flora and fauna. Its grandeur and mystique make Cervino a timeless testament to the raw beauty of the natural world.</string>
    <string name="address_value"><u> Jl. Rahadi Usman, Tengah, Kec. Pontianak
Kota,\n Kota Pontianak, Kalimantan Barat 78243</u></string>
    <string name="filter">Filter</string>
    <string name="card_one_review_value">(%1$s)</string>
    <string name="txt_rental">vehicle rental places available, sorted by <u>best value</u></string>
    <string name="top_restaurants">Top Restaurants</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="subtitle_review">How did you like the food or drink from The Hills Dining restaurant?</string>
    <string name="et_hint">Tell people about the restaurant</string>
    <string name="submit">Submit</string>
    <string name="overview">Overview</string>
    <string name="hidden_gems">Hidden gems</string>
    <string name="things">Things to do</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurant</string>
    <string name="rent_vehicle">Rent vehicle</string>
    <string name="section_city_one">When it all started</string>
    <string name="subtitle_city_one">The metropolitan city you must visit</string>


</resources>