<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.wanderlusty.feature_explore_tourism.presentation.explore.ExploreFragment"
        android:fontFamily="@font/poppins_medium"
        android:label="@string/title_explore"
        android:textColor="@color/mughalGreen80"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.wanderlusty.feature_community.presentation.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_plans"
        android:name="com.example.wanderlusty.feature_plans.presentation.PlansFragment"
        android:label="@string/title_plans"
        tools:layout="@layout/fragment_plans" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.wanderlusty.feature_account.presentation.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>