<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_four"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/img_container_card_four"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:strokeWidth="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_card_three"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/dummy_image"
            android:scaleType="centerCrop"
            android:src="@drawable/example_img" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_title_card_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="2dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/title_card_four"
        app:layout_constraintStart_toEndOf="@id/img_container_card_four"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_rating_card_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/img_container_card_four"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_card_four">

        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_start_fill_2" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:text="@string/txt_rating_card_four" />

        <TextView
            android:id="@+id/tv_review"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_review_card_four" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_tag_card_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="2dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/txt_tag_card_four"
        app:layout_constraintStart_toEndOf="@id/img_container_card_four"
        app:layout_constraintTop_toBottomOf="@id/ll_rating_card_four"/>

</androidx.constraintlayout.widget.ConstraintLayout>