<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="480dp">

    <ImageView
        android:id="@+id/iv_promotion"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:contentDescription="@string/dummy_image"
        android:scaleType="centerCrop"
        android:src="@drawable/coastal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="180dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_promotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/title_promotion"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tv_subtitle_promotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/subtitle_promotion"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_promotion"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/button_promotion"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>