<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/btn_loginregis"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/middleGreen"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="312dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:textSize="16sp"
        app:strokeColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

    <Button
        android:id="@+id/btn_regis"
        android:layout_width="312dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>