<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/antiFlasWhite"
    tools:context=".feature_explore_tourism.presentation.explore.AddTourismActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_tourism"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_add_tourism"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.75"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_tourism"
        app:strokeWidth="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/tv_share_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/title_share_photo"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/btn_add_photo"
                    android:layout_width="84dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/tv_share_photo"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/container_share_photo_background"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_camera" />

                <TextView
                    android:id="@+id/tv_title_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_add_photo"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/title_location"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/titleLocationEditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title_location"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/titleLocationEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/hint_title_location"
                        android:inputType="textMultiLine"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/davysGrey"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_add_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titleLocationEditTextLayout"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/add_location"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addLocationEditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_add_location"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addLocationEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/hint_add_location"
                        android:inputType="textMultiLine"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/davysGrey"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_description_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/addLocationEditTextLayout"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/description_location"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionLocationEditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_description_location"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionLocationEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/hint_description_location"
                        android:inputType="textMultiLine"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/davysGrey"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_add_tourism"
        android:layout_width="312dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/mughalGreen"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_add_tourism"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_add_tourism" />

</androidx.constraintlayout.widget.ConstraintLayout>