<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_community_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_user_picture"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="2dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/austin_nicholas_tham"
        app:layout_constraintStart_toEndOf="@id/iv_user_picture"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:textSize="16dp"
        android:textColor="@color/davysGrey"
        android:fontFamily="@font/poppins_regular"
        android:text="5d ago"
        app:layout_constraintStart_toEndOf="@id/iv_user_picture"
        app:layout_constraintTop_toBottomOf="@+id/txt_username"/>

    <TextView
        android:id="@+id/txt_post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="22dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txt_post_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user_picture"/>

    <TextView
        android:id="@+id/txt_post_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="18dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/txt_post_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_post_title"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/img_container_card_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="14dp"
        app:strokeWidth="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_post_subtitle">

        <ImageView
            android:id="@+id/img_card_one"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/dummy_image"
            android:scaleType="centerCrop"
            android:src="@drawable/example_img" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/bottom_interaction"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/community_stroke"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_container_card_one">

        <LinearLayout
            android:id="@+id/like_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_like"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_like"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="4,302"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/comment_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_comment"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_comment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="302"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="right">

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_share"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>